# c

./: CMakeLists.txt  Learning.md  character_arrays.c  data_types.c  editor.c  external_veriables.c  file_handling.c  get_put_char.c  input.txt  linked_list.c  main.c  malloc.c  memory_allocation.c  mutability.c  number_average.c  pointer.c  pointer_arithmetic.c  pointer_deeper.c  pointers.c  pointers_practice.c  reverse_string.c  scanf.c  scanf.s  self_refferential.c  snake.c  stack_overflow.c  struct.c  swap_values.c  typedef.c  unions.c  webserver.c
assignments/: 10.c  12.c  15.c  16.c  18.c  19.c  20.c  21.c  22.c  24.c  3.c  6.c  read_write.c  struct.c  test.txt  write.txt
