cmake_minimum_required(VERSION 3.28)
project(c C)

set(CMAKE_C_STANDARD 11)

add_executable(c reverse_string.c
        external_veriables.c
        data_types.c
        pointers.c
        pointers.c
        number_average.c
        mutability.c
        memory_allocation.c
        character_arrays.c
        pointers_practice.c
        pointer_arithmetic.c
        swap_values.c
        stack_overflow.c
        malloc.c
        linked_list.c
        struct.c
        typedef.c
)
