cmake_minimum_required(VERSION 3.28)
project(c C)

set(CMAKE_C_STANDARD 11)

add_executable(c reverse_string.c
        external_veriables.c
        data_types.c
        pointers.c
        pointers.c
        number_average.c
        mutability.c
        memory_allocation.c
        character_arrays.c
        pointers_practice.c
        pointer_arithmetic.c
        swap_values.c
        stack_overflow.c
        malloc.c
        linked_list.c
        struct.c
        typedef.c
        self_refferential.c
        self_refferential.c
        webserver.c
        editor.c
        snake.c
        scanf.c
        get_put_char.c
        file_handling.c
        assignments/3.c
        assignments/6.c
        assignments/12.c
        assignments/15.c
        assignments/16.c
        assignments/18.c
        assignments/19.c
        assignments/20.c
        assignments/21.c
        assignments/22.c
        assignments/24.c
        assignments/read_write.c
        assignments/struct.c
        pointer_deeper.c
        unions.c
)
